Efforts to fix terrain ball and strand management